# JAS-Job-Application-System

./: .env.example  .gitignore  Dockerfile  JAS.txt  README.md  docker-compose.yml  pyproject.toml  test_api.py  test_embedding_models.py  test_embedding_models2.py  test_models.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  routes.py
src/applier/: ats_detector.py  dynamic_answers.py  engine.py  fallback.py
src/applier/modules/: __init__.py  ashby.py  generic.py  greenhouse.py  lever.py
src/db/: __init__.py  client.py  schema.sql
src/documents/: cover_letter_generator.py  generator.py  resume_template.tex
src/filtering/: ai_gate.py  embedding_engine.py  github_integration.py  math_gate.py  title_gate.py
src/ingestion/: active_crawler.py  gmail_reader.py  jd_scraper.py  scheduler.py
src/pipeline/: __init__.py  orchestrator.py
src/telegram/: alerts.py  bot.py  digest.py  handlers.py
tests/: __init__.py  test_math_gate.py
