[project]
name = "jas"
version = "1.0.0"
description = "JAS — Cloud-Native AI Job Application System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Telegram Bot
    "aiogram>=3.10.0",

    # Browser Automation
    "playwright>=1.45.0",
    "playwright-stealth>=1.0.6",

    # Database
    "supabase>=2.7.0",

    # Google AI (LLM + Embeddings)
    "google-genai>=1.0.0",

    # Web Scraping & HTTP
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",

    # Document Generation
    "Jinja2>=3.1.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",

    # Scheduling
    "APScheduler>=3.10.0",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.4.0",

    # Math
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
